--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,19 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: ^6.1.0
+  just_audio_background: ^0.0.1-beta.17
+  just_audio: ^0.10.4
+  path_provider: ^2.0.15
+  permission_handler: ^11.0.1
+  flutter_media_metadata: ^1.0.0
+  flutter_animate: ^4.5.2
+  pull_down_button: ^0.10.2
+  flutter_shaders: ^0.1.2
+  vector_math: ^2.1.4
+  image_picker: ^1.1.2
+  flutter_sound: ^9.28.0
+  icons_plus: ^5.0.0
+  flutter_svg: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -60,9 +73,15 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/background.jpg
+    - assets/images/bg-morning.jpg
+    - assets/images/bg-afternoon.jpg
+    - assets/images/bg-evening.jpg
     - assets/images/image1.jpg
     - assets/images/image2.jpg
+    - assets/images/too_bad.mp3
+    - assets/icons/speech.svg
+    - assets/icons/circle.svg
+    - assets/icons/emphasis.svg
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
@@ -78,7 +97,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
+    - family:  MyFlutterApp
+      fonts:
+       - asset: assets/fonts/MyFlutterApp.ttf
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
