--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_sound: ^9.28.0
   icons_plus: ^5.0.0
   flutter_svg: ^2.2.0
+  flutter_floating_bottom_bar: ^1.2.1+1
 
 dev_dependencies:
   flutter_test:
@@ -79,9 +80,14 @@ flutter:
     - assets/images/image1.jpg
     - assets/images/image2.jpg
     - assets/images/too_bad.mp3
-    - assets/icons/speech.svg
     - assets/icons/circle.svg
     - assets/icons/emphasis.svg
+    - assets/icons/underline.svg
+    - assets/icons/b-circle.svg
+    - assets/icons/heptagon.svg
+    - assets/icons/message.svg
+    - assets/icons/octagon.svg
+    - assets/icons/pie-chart.svg
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
