--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,12 @@ dependencies:
   flutter_sound: ^9.28.0
   icons_plus: ^5.0.0
   flutter_svg: ^2.2.0
-  flutter_floating_bottom_bar: ^1.2.1+1
+  ytmusicapi_dart: ^1.1.0
+  flutter_floating_bottom_bar: ^1.3.0
+  flutter_bloc: ^8.1.3
+  http: ^1.1.0
+  url_launcher: ^6.3.0
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
@@ -88,6 +93,19 @@ flutter:
     - assets/icons/message.svg
     - assets/icons/octagon.svg
     - assets/icons/pie-chart.svg
+    - assets/icons/angelic.svg
+    - assets/icons/disappointed.svg
+    - assets/icons/excited.svg
+    - assets/icons/embarrassed.svg
+    - assets/icons/Happy.svg
+    - assets/icons/loving.svg
+    - assets/icons/neutral.svg
+    - assets/icons/sad.svg
+    - assets/icons/silly.svg
+    - assets/icons/meditation.svg
+    - assets/images/gradient-2.png
+    - assets/images/gradient.png
+    
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
