--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,10 +48,15 @@ dependencies:
   flutter_sound: ^9.28.0
   icons_plus: ^5.0.0
   flutter_svg: ^2.2.0
+  # InnerTube implementation dependencies
+  http: ^1.1.0
+  dio: ^5.4.0
+  crypto: ^3.0.3
+  shared_preferences: ^2.2.2
+  connectivity_plus: ^5.0.2
   ytmusicapi_dart: ^1.1.0
   flutter_floating_bottom_bar: ^1.3.0
   flutter_bloc: ^8.1.3
-  http: ^1.1.0
   url_launcher: ^6.3.0
   equatable: ^2.0.5
 
