--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app needs access to microphone to record voice notes for your journal entries.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs access to your photo library to attach images to your journal entries.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app needs access to camera to take photos for your journal entries.</string>
 </dict>
 </plist>
