--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,8 +48,11 @@ dependencies:
   flutter_sound: ^9.28.0
   icons_plus: ^5.0.0
   flutter_svg: ^2.2.0
+  sqflite: ^2.3.0
+  flutter_staggered_grid_view: ^0.7.0
+  path: ^1.9.0
   intl: ^0.20.2
-
+  audio_waveforms: ^1.1.0
   flutter_floating_bottom_bar: ^1.3.0
   flutter_bloc: ^8.1.3
   http: ^1.1.0
@@ -106,6 +109,8 @@ flutter:
     - assets/icons/meditation.svg
     - assets/images/gradient-2.png
     - assets/images/gradient.png
+    - assets/icons/Stress.svg
+
     
   # assets:
   #   - images/a_dot_burr.jpeg
