--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_fonts: ^6.1.0
   just_audio_background: ^0.0.1-beta.17
   just_audio: ^0.10.4
+  audio_session: ^0.1.23
   path_provider: ^2.0.15
   permission_handler: ^11.0.1
   flutter_media_metadata: ^1.0.0
@@ -58,6 +59,7 @@ dependencies:
   http: ^1.1.0
   url_launcher: ^6.3.0
   equatable: ^2.0.5
+  fl_chart: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -88,7 +90,6 @@ flutter:
     - assets/images/bg-evening.jpg
     - assets/images/image1.jpg
     - assets/images/image2.jpg
-    - assets/images/too_bad.mp3
     - assets/icons/circle.svg
     - assets/icons/emphasis.svg
     - assets/icons/underline.svg
@@ -110,6 +111,7 @@ flutter:
     - assets/images/gradient-2.png
     - assets/images/gradient.png
     - assets/icons/Stress.svg
+    - assets/images/lofi.png
 
     
   # assets:
