--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -58,5 +58,16 @@
 	<string>This app needs access to your photo library to attach images to your journal entries.</string>
 	<key>NSCameraUsageDescription</key>
 	<string>This app needs access to camera to take photos for your journal entries.</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>spotify-auth</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.kanso.mirei.mirei</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
