--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,6 @@ dependencies:
   glassmorphism: ^3.0.0
   flutter_svg: ^2.2.0
   google_fonts: ^6.2.1
-  just_audio_background: ^0.0.1-beta.17
   just_audio: ^0.9.45
   audio_session: ^0.1.24
   permission_handler: ^12.0.1
@@ -79,6 +78,10 @@ dependencies:
   flutter_shaders: ^0.1.3
   hyper_effects: ^0.3.0+1
   flutter_animate: ^4.5.0
+  # Spotify Integration
+  spotify: ^0.13.7  # For Web API (works with free users for discovery)
+  spotify_sdk: ^3.0.2  # For full playback (Premium users only)
+  flutter_dotenv: ^5.1.0  # For environment variables (.env file)
 
 dev_dependencies:
   flutter_test:
@@ -111,6 +114,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - .env  # Environment variables file
     - assets/images/bg-morning.jpg
     - assets/images/bg-afternoon.jpg
     - assets/images/bg-evening.jpg
@@ -149,6 +153,7 @@ flutter:
     - assets/images/window.jpg
     - assets/images/moody.jpg
     - assets/images/walking.png
+    - assets/images/tabby_journal.png
 
   # assets:
   #   - images/a_dot_burr.jpeg
